<resources>
    <string name="app_name">UaiGas</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_up">Cria conta</string>
    <string name="reset_password">Esqueceu sua senha?</string>
    <string name="gas_station_icon">Icon</string>
    <string name="placeholder_email">Ex: fulano@gmail.com</string>
    <string name="placeholder_password">Insira sua senha</string>
    <string name="placeholder_name">Ex: Fulano Cunha de Souza</string>
    <string name="placeholder_confirm_password">Repita sua senha</string>
    <string name="title_register">Cadastrar</string>
    <string name="title_login">Entrar</string>
    <string name="clear">Limpar</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirmação de senha</string>
    <string name="password">Senha</string>
    <string name="name">Nome</string>
    <string name="user_profile_photo">Foto de perfil do usuário</string>
    <string name="update_profile">Atualizar perfil</string>
    <string name="your_profile">Seu perfil</string>
    <string name="gasStation">Posto</string>
    <string name="save_gasStation">Salvar Posto</string>
    <string name="address">Endereço</string>
    <string name="street">Logradouro</string>
    <string name="number">Número</string>
    <string name="adjunct">Complemento</string>
    <string name="district">Bairro</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="cep">CEP</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
</resources>